Spark properties